# alexgoller_mcp-server-agenda

./: pyproject.toml  xcallback-test.py
src/mcp_server_agenda/: server.py
